--- a/src/index.css
+++ b/src/index.css
@@ -152,3 +152,13 @@
 .scrollbar-hide::-webkit-scrollbar {
   display: none; /* WebKit */
 }
+
+/* Flash effect for balance updates */
+.flash-update {
+  animation: flash 0.3s ease-in-out;
+}
+
+@keyframes flash {
+  0% { background-color: rgb(34 197 94 / 0.2); }
+  100% { background-color: transparent; }
+}
